Fix alignment of branches list title in RTL layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -942,7 +942,7 @@ section {
   }
 
   [dir="rtl"] .branches-list h4:after {
-    right: calc(50% - 25px);
+    right: 50%;
     transform: translateX(50%);
   }
 }
